Ep.8 - External Files and Partials

--- a/views/gamelist.ejs
+++ b/views/gamelist.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>GameList</title>
-</head>
-<body>
+<%- include("partials/header") %>
 	<h1>List of Our Games: </h1>
 	<% for(i=0;i<gameslist.length;i++) { %>
 		<div style="border-style: solid; padding: 5px; margin: 50px; max-width: 200px">
@@ -12,5 +6,4 @@
 			<h5 style="color: red;">Creator: <%= gameslist[i].creator %></h5>
 		</div>
 	<% } %>
-</body>
-</html>
+<%- include("partials/footer") %>
