--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>HomePage</title>
-</head>
-<body>
+<%- include("partials/header") %>
 	<h1>Game Developer</h1>
 	<h3>Welcome and Have Fun!</h3>
-</body>
-</html>
+<%- include("partials/footer") %>
