--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Game</title>
-</head>
-<body>
+<%- include("partials/header") %>
 	<h1>Game Title: <%= title %></h1>
 	<h3>Game Creator: <%= creator %></h3>
 	<% if(title == 'GTA'){ %>
@@ -12,5 +6,4 @@
 	<% } else { %>
 	<p>Description : No GTA no Party.</p>
 	<% } %>
-</body>
-</html>
+<%- include("partials/footer") %>
