--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/list">All Games</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/addgame">Add Game</a>
+        </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
