Ep.17 - Using the MongoDB documentID

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,7 @@
 			  <div class="card-body">
 			    <h5 class="card-title"><%= gameslist[i].title %></h5>
 			    <p class="card-text">Developer: <%= gameslist[i].creator %></p>
-			    <a href="/game/<%= gameslist[i].title %>/<%= gameslist[i].creator %>/<%= gameslist[i].width %>/<%= gameslist[i].height %>/<%= gameslist[i].fileName %>" class="btn btn-primary">Play Game</a>
+			    <a href="/game/<%= gameslist[i].id %>" class="btn btn-primary">Play Game</a>
 			  </div>
 			</div>
 		</div>
