--- a/views/addgame.ejs
+++ b/views/addgame.ejs
@@ -1,19 +1,38 @@
 <%- include("partials/header") %>
 
-<form action="/addgame" method="POST">
+<form action="/addgame" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label>Name</label>
     <input type="text" class="form-control" placeholder="Enter name" name="title">
+  </div>
+  <div class="form-group">
     <label>Creator</label>
     <input type="text" class="form-control" placeholder="Enter creator" name="creator">
+  </div>
+  <div class="form-group">
     <label>Size</label>
     <input type="text" class="form-control" placeholder="480" name="height">
     <input type="text" class="form-control" placeholder="680" name="width">
-    <label>File Name</label>
-    <input type="text" class="form-control" placeholder="booger.swf" name="fileName">
-    <label>Thumbnail name</label>
-    <input type="text" class="form-control" placeholder="thumbnail.png" name="thumbnailFile">
   </div>
+  <h3>Upload Files</h3>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+      </div>
+      <div class="custom-file">
+        <input type="file" class="custom-file-input" id="gameInput" aria-describedby="inputGroupFileAddon01" name="gameFile">
+        <label class="custom-file-label" for="gameInput">Game file(.swf)</label>
+      </div>
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+      </div>
+      <div class="custom-file">
+        <input type="file" class="custom-file-input" id="imageInput" aria-describedby="inputGroupFileAddon01" name="imageFile">
+        <label class="custom-file-label" for="imageInput">Image File</label>
+      </div>
+    </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
