--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,8 @@
 			    <h5 class="card-title"><%= gameslist[i].title %></h5>
 			    <p class="card-text">Developer: <%= gameslist[i].creator %></p>
 			    <a href="/game/<%= gameslist[i].id %>" class="btn btn-success">Play Game</a>
-			    <a href="/game/edit/<%= gameslist[i].id %>" class="btn btn-primary">Edit Game</a>
+			    <a href="/game/edit/<%= gameslist[i].id %>" class="btn btn-primary">Edit</a>
+			    <a href="/game/delete/<%= gameslist[i].id %>" class="btn btn-danger">Delete</a>
 			  </div>
 			</div>
 		</div>
