--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>NodeJS Passport App</title>
+	<title>Page Mockup</title>
 	<link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
 	<script src="https://kit.fontawesome.com/9a23eb668b.js" crossorigin="anonymous"></script>
 </head>
