Implementing Data Tables

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   	<div class="container">
 	    <h1><%= title %></h1>
 	    <p>Welcome to <%= title %></p>
-	    <table class="table table-bordered">
+	    <table id="table_1" class="table table-bordered">
 	    	<thead>
 	    		<tr>
 	    			<th>No</th>
