--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,10 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/assets/css/bootstrap.min.css' />
-    <script src="/assets/css/jquery.js"></script>
+    <link rel='stylesheet' href='/assets/css/dataTables.bootstrap4.css' />
+    <script src="/assets/js/jquery.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery.dataTables.js"></script>
+    <script src="/assets/js/dataTables.bootstrap4.js"></script>
+    <script src="/assets/js/main.js"></script>
   </head>
